# movie_recommendation_system

./: .gitignore  LICENSE  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: render-ci.yaml  vercel.yaml
config/: schema.yaml
movie-recommendation/: count_vectorizer.pkl  movies.pkl
notebooks/: mongodb_connection.ipynb  movie_recommendation_system.ipynb
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: movie_data.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
static/css/: style.css
templates/: index.html
