[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Rohit Rane", email = "ranerohit996@gmail.com"}]

dependencies = [
    "numpy",
    "pandas",
    "pymongo",
    "scikit-learn",
    "ipykernel",
]

[tool.setuptools]
packages = {find = {}}