[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Rohit Rane", email = "ranerohit996@gmail.com"}]
dependencies = [
    "numpy",
    "pandas==2.2.2",
    "scikit-learn",
    "scipy",
    "requests",
    "pymongo",
    "certifi",
    "matplotlib",
    "seaborn",
    "nltk",
    "PyYAML",
    "dill",
    "from_root",
    "python-dotenv",
    "ipykernel",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "starlette==0.36.3",
    "jinja2==3.1.3",
    "python-multipart"
]

[tool.setuptools]
packages = {find = {}}